Properly escape single quotes in strings

Unfortunately the ESCAPE clause can only used with a LIKE Operator
and only escapes wildcard characters. Single quotes can be escaped
using double single quotes.

BUG:512562
FIXED-IN:6.5.5


(cherry picked from commit b59b98ba30ba6504c671824f0c29b52cc6868613)

Co-authored-by: David Redondo <kde@david-redondo.de>